--- a/index.html
+++ b/index.html
@@ -6,22 +6,65 @@
   <title>N.M's Portfolio</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://naoya70876.github.io/portfolio-photo/photo.css">
-  <script type="text/javascript" src="script-portfolio.js"></script>
+  <script type="text/javascript" src="script-portfolio-photo.js"></script>
 </head>
 <body>
 
   <!--header-->
   <header>
     <span class="fa fa-bars menu-icon"></span>
-      <h1 class="header-logo">N.M's Portfolio</h1>
+    <h1 class="header-logo">N.M's Portfolio</h1>
   </header>
 
   <!--first-wrapper-->
   <div class="first-wrapper">
-    <img src="file:///Users/naoyamatsuda/Downloads/VSCode/portfolio/IMG_0603-1.JPG" class="first-image">
+    <div class="photo">
+      <h1 class="photo-logo">Photo</h1>
+    </div>
+    <img class="photo-image" src="https://naoya70876.github.io/portfolio-photo/photo.png">
+    <div class="photo-contents">
+      <div class="photo-item">
+        <h1>The Wards of Tokyo</h1>
+        <h2>東京23区の街撮り写真集です。
+          <br>This is a photo collection of 23 wards of Tokyo.</h2>
+        <a href="https://www.behance.net/gallery/85892571/The-Wards-of-Tokyo"><span class="fa fa-image"></span>https://www.behance.net/gallery/85892571/The-Wards-of-Tokyo</a>
+        <div class="photo-sample">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_0603-1.JPG">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_0917-1.jpg">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_1325-1%20コピー.jpg">
+        </div>
+      </div>
+    </div>
+    <div class="photo-contents">
+      <div class="photo-item">
+        <h1>"waiting for the dawn"</h1>
+        <h2>音楽ライブ企画"waiting for the dawn"の写真集です。
+          <br>This is a photo collection of the event "waiting for the dawn."</h2>
+        <a href="https://www.behance.net/gallery/99316061/waiting-for-the-dawn"><span class="fa fa-image"></span>https://www.behance.net/gallery/99316061/waiting-for-the-dawn</a>
+        <div class="photo-sample">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_2244-11.jpg">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_2390-74.jpg">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_7080-2-24.jpg">
+        </div>
+      </div>
+    </div>
+    <div class="photo-contents">
+      <div class="photo-item">
+        <h1>Stock Photo</h1>
+        <h2>Adobe Stockにて販売中のストック集です。
+          <br>This is a stock photo collection on sale at Adobe Stock.</h2>
+        <a href="https://stock.adobe.com/jp/contributor/209099679/直弥%20松田"><span class="fa fa-image"></span>https://stock.adobe.com/jp/contributor/209099679/直弥%20松田</a>
+        <div class="photo-sample">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_7800-45.jpg">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_7935-98.jpg">
+          <img src="https://naoya70876.github.io/portfolio-photo/IMG_2527-7.jpg">
+        </div>
+      </div>
+    </div>
+    
     <div class="profile">
       <h1 class="profile-logo">Profile</h1>
-      <img src="file:///Users/naoyamatsuda/Downloads/VSCode/portfolio/IMG_5153.JPG" class="profile-image">
+      <img class="profile-image" src="https://naoya70876.github.io/portfolio-photo/IMG_5153.JPG">
       <div class="profile-text">
         <h1>松田 直弥 (Naoya Matsuda)</h1>
         <h2>1992年、東京出身。
@@ -32,41 +75,18 @@
         </h2>
       </div>
     </div>
+    <dix class="footer-copy">
+      <span class="fa fa-bars menu-icon"></span>
+      <a class="footer-logo-copy" href="https://naoya70876.github.io/portfolio-top/">N.M's Portfolio</a>
+    </dix>
   </div>
 
   <!--second-wrapper-->
-  <div class="second-wrapper">
-    <div class="works">
-      <h1 class="works-logo">Works</h1>
-    </div>
-    <div class="works-contents">
-      <div class="works-item">
-        <img src="file:///Users/naoyamatsuda/Downloads/VSCode/portfolio/music.png" class="item-image">
-        <a href="https://www.youtube.com/watch?v=sS99NE4tmPQ&list=RD63B61zFNucA&index=27" class="item-link">Music</a>
-      </div>
-      <div class="works-item">
-        <img src="file:///Users/naoyamatsuda/Downloads/VSCode/portfolio/photo.png" class="item-image">
-        <a href="https://www.youtube.com/watch?v=sS99NE4tmPQ&list=RD63B61zFNucA&index=27" class="item-link">Photo</a>
-      </div>
-      <div class="works-item">
-        <img src="file:///Users/naoyamatsuda/Downloads/VSCode/portfolio/movie.png" class="item-image">
-        <a href="" class="item-link">Movie</a>
-      </div>
-      <div class="works-item">
-        <img src="file:///Users/naoyamatsuda/Downloads/VSCode/portfolio/design.png" class="item-image">
-        <a href="" class="item-link">Design</a>
-      </div>
-      <div class="works-item">
-        <img src="file:///Users/naoyamatsuda/Downloads/VSCode/portfolio/web.png" class="item-image">
-        <a href="" class="item-link">Web</a>
-      </div>
-    </div>
-  </div>
 
   <!--footer-->
   <footer>
     <span class="fa fa-bars menu-icon"></span>
-      <h1 class="footer-logo">N.M's Portfolio</h1>
+    <a class="footer-logo" href="https://naoya70876.github.io/portfolio-top/">N.M's Portfolio</a>
   </footer>
 
 </body>
