--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <br>This is a stock photo collection on sale at Adobe Stock.</h2>
         <a href="https://stock.adobe.com/jp/contributor/209099679/直弥%20松田"><span class="fa fa-image"></span>https://stock.adobe.com/jp/contributor/209099679/直弥%20松田</a>
         <div class="photo-sample">
-          <img src="https://naoya70876.github.io/portfolio-photo/IMG_7800-45.jpg">
-          <img src="https://naoya70876.github.io/portfolio-photo/IMG_7935-98.jpg">
-          <img src="https://naoya70876.github.io/portfolio-photo/IMG_2527-7.jpg">
+          <img class="photo-sample-a" src="https://naoya70876.github.io/portfolio-photo/IMG_7800-45.jpg">
+          <img class="photo-sample-a" src="https://naoya70876.github.io/portfolio-photo/IMG_7935-98.jpg">
+          <img class="photo-sample-a" src="https://naoya70876.github.io/portfolio-photo/IMG_2527-7.jpg">
         </div>
       </div>
     </div>
